# Foxhole-Automated-Quartermaster

./: .bandit  .deepsource.toml  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .safety-project.ini  CLI_README.md  Foxhole Automated Quartermaster (FAQ)_ Architecture & Components.docx  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  create_demo_network.py  demo_foxhole_network.json  demo_foxhole_network.yaml  demo_order_system.py  demo_presentation.py  main.py  onboard_network.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_fluid_dynamics_demo.py  run_integration_tests.py  run_ruff.py  run_tests.py  setup.py  sonar-project.properties  test_onboard_network.py  transportation_cost.py
.github/: copilot-instructions.md
data/: Foxhole Datamine_ Changes from Update 59 to Update 60.xlsx
data-pipeline/: job_scheduler.pyi  update_demand_node.pyi
data/db/: __init__.py  db.py
data/discord/: __init__.py  discord.py
data/static-game-data/: import_static_data.py
data/warapi/: war_api_client.py  war_static_cache.py
data_pipeline/: bot.py  job_scheduler.pyi
docs/: ARCHITECTURE.md  architecture.md  cards.md  channels.md  dependencies.md  facilities.md  fluid_dynamics_priority_algorithm.md  frontline.md  network.md  order-system.md  production-preference-calc.md  production-preference.md  project-goals.md  project_overview.md  static-game-data.md  static-game-lookup.md  task_generation_flow.md  task_interface.md  tasks.md  tech.md  transportation-cost.md  war-api.md  workflow-onboarding.md  workflow-update-stockpile.md  world-structure-production.md
docs-design/: Foxhole Bot Planning.md  Foxhole Logistics Bot_ Architecture & Components.md  Foxhole Logistics_ Pull-Based Design Doc (Discord Bot Refinement) - AI Responses.md  Foxhole Workflow - Onboarding.md  Foxhole-Graph-Details.md  Foxhole-Priority.md
docs-implementation/: discord-user-stories.md
examples/: facility_tracking_demo.py  fluid_priority_demo.py  graph_integration_demo.py  production_network_demo.py  transport_time_demo.py  transportation_cost_demo.py
notes/: s6_server.py
presentation/: __init__.py
presentation/demo/: run_renderer_demo.py
presentation/templates/: alert.jinja2  inventory_delta.jinja2  production_report.jinja2  task_update.jinja2
services/: production_decision_integrator.py  task.py
services/FoxholeDataObjects/: enums.py  item.py  processes.py  production_time.py  recipe.py
services/inventory/: base_types.py  facility_node.py  inventory_graph.py  order.py  production_nodes.py  resource_node.py  storage_node.py
services/production-calculator/: materials.py  production_graph.py
services/production_calculator/: process_types.py  production_graph.py
services/tasks/: __init__.py  fluid_priority.py  graph_integration.py  task.py  task_layer.py  task_order_integration.py
src/: bot.py  main.py
src/bot/: main.py
src/config/: priority_config.py
src/database/: database_manager.py  models.py
src/discord_bot/: task_manager.py  tech_tracker.py
src/foxhole_quartermaster/: __init__.py  __main__.py
src/foxhole_quartermaster/commands/: logistics.py  tenant.py
src/foxhole_quartermaster/core/: bot.py  tenant.py
src/foxhole_quartermaster/models/: __init__.py
src/foxhole_quartermaster/utils/: database.py
src/models/: enums.py  item.py  task.py
src/presentation/: renderer.py
src/presentation/templates/: task_update.jinja2
src/scripts/: import_items.py  import_wiki_items.py
src/services/: discord_service.py  task_generation_service.py  task_service.py
tests/: conftest.py  test_fluid_priority.py  test_graph_integration.py  test_order_system.py  test_presentation.py  test_priority_transport_time.py  test_production_decision_integrator.py  test_task_generator_transport_time.py  test_transport_time.py  test_transportation_cost.py
tests/data/discord/: bot-connection.py  discord-bot-test-plan.md  integration_discord_bot.py  test-plan-connection.md  test_discord_bot_connection.py  test_discord_bot_message.py  test_discord_bot_retries.py  test_discordbot_channels.py
tests/data/warapi/: test_war_static_cache.py
tests/database/: test_item_model.py  test_location_model.py  test_models.py
tests/runners/: __init__.py  bandit_runner.py  pycov_runner.py  pylint_runner.py  ruff_runner.py  run_quality_checks.py  safety_runner.py  vulture_runner.py
tests/screenshot_parser/: test_tech_tracker.py
tests/scripts/: test_wiki_parsing.py
tests/services/: test_task_generation_service.py
tests/unit/: test_multi_tenant.py
